# Computer-Architecture-2023.1

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
include/: Registers.hpp  Tomasulo.h  Tomasulo.hpp  defines.hpp  file_handler.hpp  menu.hpp  mips_types.hpp  pipeline_phases.hpp  utils.hpp
include/Tomasulo/: instructions.hpp  utils.hpp
inputs/asm/: 1.mips  2.mips  3.mips
inputs/compiled/: 1  2  3
scripts/: asm.py  run.bash
source/: Registers.cpp  Tomasulo.cpp  TomasuloIO.cpp  menu.cpp
src/: main.cpp
